# LCloud-task

./: .gitignore  .pre-commit-config.yaml  config_service.py  main.py  pyproject.toml  ruff.toml  s3_service.py
